# openre

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  address_map.txt  openre.sln  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
docs/: architecture.mmd  design.md
games/re2/: main.lua
games/re2/script/: main.lua  menu.lua  pulse.lua  scene.lua  scheduler.lua  util.lua
src/: adt.cpp  adt.h  audio.cpp  audio.h  bios.cpp  bios.h  camera.cpp  camera.h  config.cpp  data.hpp  door.cpp  door.h  em_dog.cpp  em_spider.cpp  enemy.cpp  enemy.h  entity.cpp  entity.h  error.h  file.cpp  file.h  font.cpp  font.h  fontbuiltin.cpp  fswatch.cpp  fswatch.h  gfx.h  gfxadt.cpp  gfxbmp.cpp  gfxtim.cpp  gfxwebp.cpp  hook.cpp  hud.cpp  hud.h  input.cpp  input.h  interop.cpp  interop.hpp  item.h  itembox.cpp  (+47 more)
tools/interopgen/: Program.cs  input.txt  interopgen.sln
